# forgiving-semver

./: Cargo.toml  README.md
src/: lib.rs  version.rs  version_req.rs
tests/: deprecation.rs  diesel.rs  serde.rs
