[package]

name = "forgiving-semver"
version = "0.11.0"
authors = ["Michael Bausano <michael@porkbrain.com>", "Steve Klabnik <steve@steveklabnik.com>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bausano/forgiving-semver"
homepage = "https://docs.rs/crate/forgiving-semver/"
documentation = "https://docs.rs/crate/forgiving-semver/"
description = """
Semantic version parsing and comparison. Fork of https://docs.rs/crate/semver
which supports parsing outside of semver spec, e.g. "1.0" -> "1.0.0".
"""
readme = "README.md"
keywords = ["version", "semantic", "compare"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
forgiving-semver-parser = "0.10"

serde = { version = "1.0", optional = true }
diesel = { version = "1.1", optional = true }

[features]
default = []

# are we testing on CI?
ci = ["serde", "diesel/sqlite"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
